--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ nav {
   padding: 1.5rem;
 }
 
+.t-center {
+  text-align: center;
+}
+
 #mobile-nav {
   position: fixed;
   transition: transform 1s ease-in-out;
@@ -145,4 +149,35 @@ header h2 {
 header h3 {
   color: #272a31;
   font-size: 1.3rem;
+}
+
+#main-program {
+  background-color: #272a31;
+}
+
+#main-program h2 {
+  color: #f9f9f9;
+  padding: 1.5rem 0 0.5rem 0;
+}
+
+.underline {
+  margin: auto 0;
+  height: 1px;
+  width: 40px;
+  background-color: #ec5242;
+}
+
+.card-program {
+  border: 1px #f9f9f9 solid;
+  padding: 2rem;
+  margin: 1rem 1.5rem;
+}
+
+#join-button {
+  background-color: #ec5242;
+  margin: 0 auto;
+  width: 60%;
+  padding: 2rem;
+  color: #f9f9f9;
+  text-decoration: none;
 }
