--- a/style.css
+++ b/style.css
@@ -181,3 +181,21 @@ header h3 {
   color: #f9f9f9;
   text-decoration: none;
 }
+
+.card-program i {
+  flex: 1;
+  color: #f9f9f9;
+  flex-shrink: 1;
+}
+
+.card-program h4 {
+  flex: 2;
+  color: #ec5242;
+  flex-shrink: 1;
+}
+
+.card-program p {
+  flex: 3;
+  color: #f9f9f9;
+  flex-shrink: 4;
+}
