--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ header h3 {
   background: url('img/speakerbackground.png') top left no-repeat;
   background-blend-mode: lighten;
   background-size: 25%;
+  transition: transform 1s ease-in-out;
 }
 
 .speaker-image {
@@ -247,4 +248,25 @@ header h3 {
 
 .speaker-description {
   color: #272a31;
+}
+
+.ts-1 {
+  transition: transform 1s ease-in-out;
+}
+
+.ts-12 {
+  transition: transform 1.2s ease-in-out;
+}
+
+.ts-14 {
+  transition: transform 1.4s ease-in-out;
+}
+
+.ts-16 {
+  transition: transform 1.6s ease-in-out;
+}
+
+#see-more {
+  transform: translateY(-4800%);
+  transition: transform 1s ease-in-out;
 }
