--- a/style.css
+++ b/style.css
@@ -267,6 +267,13 @@ header h3 {
 }
 
 #see-more {
-  transform: translateY(-4800%);
+  transform: translateY(-1800%);
   transition: transform 1s ease-in-out;
+  padding: 1.2rem;
+  margin: 0 auto;
+  width: 90%;
+}
+
+footer {
+  background: #272a31;
 }
