--- a/style.css
+++ b/style.css
@@ -41,8 +41,7 @@ nav {
 }
 
 .past-box img {
-  max-width: 100%;
-  min-width: 100%;
+  width: 100%;
   height: 250px;
   top: 0;
   position: absolute;
@@ -468,6 +467,7 @@ footer {
 
 .past-box-desc {
   position: absolute;
-  top: 35%;
-  left: 30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
