--- a/style.css
+++ b/style.css
@@ -631,4 +631,13 @@ footer {
   #featured-speakers {
     grid-template-columns: 1fr 1fr;
   }
+
+  #parterns {
+    width: 90%;
+    margin: auto;
+  }
+
+  #img-div img:nth-child(7) {
+    margin: 0;
+  }
 }
