--- a/style.css
+++ b/style.css
@@ -590,14 +590,21 @@ footer {
 
   #program-cards {
     flex-direction: row;
+    width: 90%;
+    margin: auto;
+  }
+
+  #main-program .underline {
+    margin: 1rem 0 4rem 0;
   }
 
   .card-program {
     flex-direction: column;
-    width: 150px;
+    flex: 1;
     text-align: center;
     font-weight: 600;
     font-size: 1.2rem;
+    margin: 0.1rem;
   }
 
   #join-button {
