--- a/style.css
+++ b/style.css
@@ -308,12 +308,12 @@ footer .underline {
 }
 
 .card-speaker {
+  display: flex;
   transition: transform 1s ease-in-out;
   position: relative;
-  max-width: 60%;
-  margin-right: 2rem;
-  margin-bottom: 2rem;
   padding: 0.5rem;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .speaker-image {
@@ -339,6 +339,8 @@ footer .underline {
   justify-items: center;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .speaker-resume {
@@ -665,8 +667,17 @@ footer {
     display: none;
   }
 
+  .speaker-image {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+  }
+
   .card-speaker {
     margin-right: 0;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 1rem;
   }
 
   .card-speaker:nth-child(n+3) {
@@ -706,10 +717,6 @@ footer {
   .past-box {
     width: 50%;
     height: 400px;
-  }
-
-  .card-speaker div {
-    width: 200px;
   }
 
   #campaign-logo:hover {
